<resources>
    <string name="app_name">SiPress</string>
    <string name="student_presence_system">Sistem presensi siswa</string>
    <string name="student_identity_number">Nomor Induk Siswa</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="sign_in">Masuk</string>
    <string name="create_account_here">Buat akun disini</string>
    <string name="check_your_nis">CEK NIS ANDA</string>
    <string name="check_nis_text">Proses ini diperlukan sebagai validasi bahwa anda siswa terdaftar</string>
    <string name="next">Lanjut</string>
    <string name="check_nis">Cek NIS</string>
    <string name="create_password_text">Kata sandi harus terdiri minimal dari 8 huruf atau angka</string>
    <string name="repeat_password">Ulangi Password</string>
    <string name="create_account">Buat Akun</string>
    <string name="create_password">Buat Password</string>
    <string name="input_otp_code">Masukan Kode OTP</string>
    <string name="we_already_send_you_otp_code">Kami telah mengirim kode OTP ke no %s</string>
    <string name="input">Masukan</string>
    <string name="wait_for_six_second_to_send_again">Tunggu dalam 60 detik untuk mengirim ulang</string>
    <string name="send_again">Kirim Ulang</string>
    <string name="on_going">Sedang Berlangsung</string>
    <string name="fullName">Nama Lengkap</string>
    <string name="data_of_birth">Tempat Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">No. Telp</string>
    <string name="change_password">Ubah password</string>
    <string name="monday">Senin</string>
    <string name="tuesday">Selasa</string>
    <string name="wednesday">Rabu</string>
    <string name="thrusday">Kamis</string>
    <string name="friday">Jumat</string>
    <string name="saturday">Sabtu</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="error_login_invalid_email">Email yang anda masukan salah.</string>
    <string name="error_login_wrong_password">Password yang anda masukan salah.</string>
    <string name="error_login_user_disabled">Akun non-aktif</string>
    <string name="error_login_user_not_found">User tidak ditemukan.</string>
    <string name="error_login_password_is_weak">Password yang anda masukan salah.</string>
    <string name="error_default_login">Login gagal, silahkan coba lagi nanti!</string>
    <string name="login_success">Login sukses, sendang mengalihkan…</string>
    <string name="information">Informasi</string>
    <string name="choice_school">Pilih Sekolah</string>
    <string name="batch">Angkatan</string>
    <string name="error_firestore_aborted">Proses dibatalkan!</string>
    <string name="error_firestore_cancelled">Proses di batalkan</string>
    <string name="error_firestore_data_loss">Data hilang atau rusak!</string>
    <string name="error_firestore_not_found">Data tidak ditemukan!</string>
    <string name="error_default">Terjadi kesalahan!</string>
    <string name="error_account_already_in_use">NIS ini sudah dipakai!</string>
    <string name="search_school">Cari Sekolah</string>
    <string name="search">Cari</string>
    <string name="search_batch">Angkatan</string>
    <string name="back_button">Back Button</string>
    <string name="logo">Logo</string>
    <string name="more_button">More Button</string>
    <string name="profile_menu">Profile Menu</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="daily_absent_icon">Daily Absent Icon</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="address">Alamat</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="we_are_preparing_data">Kami sedang mempersiapkan data!</string>
</resources>