<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="adapter"
            type="com.example.sipress.adapter.ScheduleAdapter" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ScheduleFragment">

        <HorizontalScrollView
            android:padding="@dimen/standar_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/dayChipGroup"
                app:chipSpacing="@dimen/minimum_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:text="@string/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:text="@string/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:text="@string/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:text="@string/thrusday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:text="@string/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:text="@string/thrusday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:text="@string/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scheduleRecyclerview"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:adapter="@{adapter}"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>
</layout>