<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.sipress.ui.viewModel.LoginViewModel" />
        <variable
            name="username"
            type="String" />
        <variable
            name="password"
            type="String" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.LoginFragment">

        <LinearLayout
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:layout_marginTop="32dp"
                android:id="@+id/logo"
                android:adjustViewBounds="true"
                android:src="@drawable/sipress_dark"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/logoText"
                android:layout_marginBottom="24dp"
                android:text="@string/student_presence_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/student_identity_number"
                    android:inputType="number"
                    android:text="@={viewModel.username}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="16dp"
                android:text="@string/sign_in"
                android:onClick="@{(view)->viewModel.signIn(view, username, password)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:background="@color/secondaryColor"
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/create_account_here"
                android:textColor="@color/secondaryTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</layout>