<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isEnable"
            type="Boolean" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ProfileAccountFragment">

        <ImageButton
            android:src="@drawable/ic_settings"
            android:layout_margin="@dimen/standar_space"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@android:color/white"
            android:enabled="@{isEnable, default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:text="rizkirakasiwi09@gmail.com"
                android:hint="@string/e_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@android:color/white"
            android:enabled="@{isEnable, default=false}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:text="085794626977"
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="@dimen/standar_space"
            android:textColor="@color/primaryColor"
            android:layout_marginStart="@dimen/minimum_space"
            android:layout_marginEnd="@dimen/minimum_space"
            android:text="@string/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>